fix: Made Git Stats side nav visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,23 +1,23 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 
-.total-container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
+.total-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: fixed;
 }
-.toolbar{
-    position: relative;
-    z-index: 2;
-    height: 6%;
-    min-height: 40px;
-    box-shadow: 0px 5px 20px black;
+.toolbar {
+  position: relative;
+  z-index: 2;
+  height: 6%;
+  min-height: 40px;
+  box-shadow: 0px 5px 20px black;
 }
 
-.toolbar-header{
-    position: absolute;
-    margin-left: 50%;
+.toolbar-header {
+  position: absolute;
+  margin-left: 50%;
 }
 .sidenav-container {
   width: 100%;
@@ -30,55 +30,55 @@
 }
 
 .sidenav {
-  width: 10%; 
+  width: 10%;
   box-shadow: 1px 0px 20px black;
 }
-.sidenav-button{
-    margin-left: 150px;
-    background:none;
-    padding:0;
-    font-size: 20px;
+.sidenav-button {
+  margin-left: 150px;
+  background: none;
+  padding: 0;
+  font-size: 20px;
 }
-.theme-toggle{
-    margin-top: 1px;
-    position: fixed;
-    margin-left: 90%;
+.theme-toggle {
+  margin-top: 1px;
+  position: fixed;
+  margin-left: 90%;
 }
-.sidenav-list{
-    padding: 0px;
-    margin-top: 0px;
-    width: 100%;
-    position: fixed;
-    li{
-        list-style: none;
-        padding: 10%;
-        width: 80%;
-       a{
-           margin-left:15%;
-           text-decoration: none;
-       } 
+.sidenav-list {
+  padding: 0px;
+  margin-top: 55px;
+  width: 100%;
+  position: fixed;
+  li {
+    list-style: none;
+    padding: 10%;
+    width: 80%;
+    a {
+      margin-left: 15%;
+      text-decoration: none;
     }
+  }
 }
 
-.sidenav-footer{
-    padding: 0px;
-    margin-bottom: 0px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    li{
-        list-style: none;
-        padding: 5%;
-        width: 90%;
-       a{
-           text-decoration: none;
-       } 
+.sidenav-footer {
+  padding: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  li {
+    list-style: none;
+    padding: 5%;
+    width: 90%;
+    a {
+      text-decoration: none;
     }
+  }
 }
 
 .sign-in-buttons {
-    margin-top: 1px;
-    margin-left: 95%;
-    position: absolute;
-    color: white;
+  margin-top: 1px;
+  margin-left: 95%;
+  position: absolute;
+  color: white;
 }
